<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".presentation.feature.addeditpet.DetailsActivity">


    <!-- Label -->
    <TextView
        android:id="@+id/overview_label"
        style="@style/CategoryStyle"
        android:text="@string/category_overview"
        app:layout_constraintEnd_toStartOf="@+id/edit_pet_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Name field -->
    <EditText
        android:id="@+id/edit_pet_name"
        style="@style/EditorFieldStyle"
        android:autofillHints="@string/hint_pet_name"
        android:hint="@string/hint_pet_name"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/overview_label"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Breed field -->
    <EditText
        android:id="@+id/edit_pet_breed"
        style="@style/EditorFieldStyle"
        android:autofillHints="@string/hint_pet_breed"
        android:hint="@string/hint_pet_breed"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit_pet_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_pet_name"
         />


    <!-- Label -->
    <TextView
        android:id="@+id/gender_label"
        style="@style/CategoryStyle"
        android:text="@string/category_gender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pet_breed" />


    <!-- Gender drop-down spinner -->
    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:paddingRight="@dimen/padding_16"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/gender_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_pet_breed" />


    <!-- Label -->
    <TextView
        android:id="@+id/Measurement_label"
        style="@style/CategoryStyle"
        android:text="@string/category_measurement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_label" />


    <!-- Weight field -->
    <EditText
        android:id="@+id/edit_pet_weight"
        style="@style/EditorFieldStyle"
        android:autofillHints="@string/hint_pet_weight"
        android:hint="@string/hint_pet_weight"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/label_weight_units"
        app:layout_constraintStart_toEndOf="@+id/Measurement_label"
        app:layout_constraintTop_toBottomOf="@+id/gender_label"
        />

    <!-- Units for weight (kg) -->
    <TextView
        android:id="@+id/label_weight_units"
        style="@style/EditorUnitsStyle"
        android:text="@string/unit_pet_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gender_label" />

</androidx.constraintlayout.widget.ConstraintLayout>